Fix skill overflow

--- a/src/components/Skills.scss
+++ b/src/components/Skills.scss
@@ -6,6 +6,7 @@
 .skill-section {
   display: flex;
   justify-content: space-around;
+  // flex-wrap: wrap;
 
   h3 {
     margin: 1em 0%;
@@ -13,5 +14,15 @@
 
   li {
     margin: 1em;
+  }
+}
+
+@media (max-width: 480px) {
+  .skill-section {
+    margin-top: 0.5em;
+    font-size: 16px;
+    li {
+      margin: 0;
+    }
   }
 }
